fix:align

--- a/_src/css/modules/_article.css
+++ b/_src/css/modules/_article.css
@@ -95,6 +95,12 @@
   }
 }
 
+.article__align-right {
+  display: flex;
+  justify-content: flex-end;
+  text-transform: uppercase;
+}
+
 .article__date {
   display: block;
   margin-bottom: .8rem;
